# AgentEconomist

./: .env.example  .gitignore  .gitignore.github  .gitignore.gitlab.backup  LICENSE  README.md  README_ZH.md  data  default.yaml  experiment_config.yaml  install.sh  pyproject.toml  requirements.txt  run_joint_debug.sh  run_sim_with_yaml.sh
.cursor/: mcp_sse.json  mcp_streamable.json
AgentEconomist/: README_QUICKSTART.txt  __init__.py  chat.py  config.py  env.example  langgraph.json  pyproject.toml  requirements.txt  run_simulation.sh  start_agent.sh  start_server.py
AgentEconomist/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
AgentEconomist/core/: __init__.py  manifest.py  (+1 more)
agentsociety_ecosim/: SETUP.md  default.yaml  run_sim_with_yaml.sh
database/: DEEP_SEARCH_PROMPT.md  QDRANT_DEPLOYMENT.md  README.md  requirements.txt
economist/: .env.example  DEPLOYMENT.md  README.md  agent_state.py  analyze_firm_detail.py  design_agent.py  experiment_analyzer.py  langgraph_agent.py  requirements_ui.txt  run_design_agent.sh  run_simulation.sh  run_streamlit.sh  run_streamlit_background.sh  run_streamlit_tmux.sh  streamlit.service  streamlit_agent_wrapper.py  streamlit_app.py  tool_manager.py
frontend/: .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json
paper_writing/: transkg_metadata.json
plugins/: FutureDiscountLogConsumptionMaximizationStrategy.py  HouseholdAlgorithm.py  HouseholdConsumptionFunction.py  HouseholdDecisionRule.py  NoisyHouseholdDecisionRule.py
(+145 files in other folders)
